--- a/app/src/main/res/values-zh-rCN/strings.xml
+++ b/app/src/main/res/values-zh-rCN/strings.xml
@@ -412,6 +412,7 @@
   <string name="MESSAGES_FACE_MOVE">移动到现有面孔</string>
   <string name="MESSAGES_FACE_MOVE_BTN">移动到</string>
   <string name="MESSAGES_FACE_NONE">暂无面孔</string>
+  <string name="MESSAGES_FACE_VISIT_TIMES">最近30天来访 %s 次</string>
   <string name="MESSAGES_FILTER_ALL">全部</string>
   <string name="MESSAGES_FILTER_STRANGER">陌生人</string>
   <string name="MESSAGES_IDENTIFY_ADD_BTN">添加到现有面孔</string>
