--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -404,8 +404,8 @@
   <string name="MESSAGES_DELETE_FCAE_POP">Supprimer le visage?</string>
   <string name="MESSAGES_DELETE_ICON_BTN">Supprimer l\'icône</string>
   <string name="MESSAGES_DELETE_ICON_MES">Supprimer l\'icône et les messages</string>
-  <string name="MESSAGES_DELETE_ICON_POP">Supprimez l\'icône et tous les messages connexes? Après avoir été supprimé, le message sous d\'autres options sera également supprimé.</string>
-  <string name="MESSAGES_DELETE_POP">Supprimez le visage et tous les messages connexes? Après avoir été supprimé, le message sous d\'autres options sera également supprimé.</string>
+  <string name="MESSAGES_DELETE_ICON_POP">Supprimez l\'icône et tous les messages connexes?</string>
+  <string name="MESSAGES_DELETE_POP">Supprimez le visage et tous les messages connexes?</string>
   <string name="MESSAGES_FACE_IDENTIFY">Identifier</string>
   <string name="MESSAGES_FACE_INFO">information du visage</string>
   <string name="MESSAGES_FACE_MABAGE">Gestion du visage</string>
